--- a/textme.css
+++ b/textme.css
@@ -62,9 +62,14 @@ margin-left: 300px;
     height: 40px;
     width: 200px;
 }
-#subtv{
+.subtv{
   background-color: green;
   color: white;
   height: 30px;
   width: 80px;
+}
+#whatsapp{
+  text-decoration: none;
+  font-size: 20px;
+  color: white;
 }
