--- a/textme.css
+++ b/textme.css
@@ -67,6 +67,7 @@ margin-left: 300px;
   color: white;
   height: 30px;
   width: 80px;
+  border:solid blue;
 }
 #whatsapp{
   text-decoration: none;
